--- a/D3D12/1_helloWorld/1_helloWorld.vcxproj.filters
+++ b/D3D12/1_helloWorld/1_helloWorld.vcxproj.filters
@@ -8,5 +8,6 @@
     <ClInclude Include="window.hpp" />
     <ClInclude Include="config.hpp" />
     <ClInclude Include="d3d12.hpp" />
+    <ClInclude Include="timer.hpp" />
   </ItemGroup>
 </Project>
