--- a/D3D12/1_helloWorld/1_helloWorld.vcxproj.filters
+++ b/D3D12/1_helloWorld/1_helloWorld.vcxproj.filters
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="d3d12.cpp" />
+    <ClInclude Include="config.hpp" />
+    <ClInclude Include="d3d12App.hpp" />
+    <ClInclude Include="gameTimer.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="window.hpp" />
-    <ClInclude Include="config.hpp" />
-    <ClInclude Include="d3d12.hpp" />
-    <ClInclude Include="timer.hpp" />
+    <ClCompile Include="d3d12App.cpp" />
   </ItemGroup>
 </Project>
