--- a/D3D12/1_helloWorld/1_helloWorld.vcxproj.filters
+++ b/D3D12/1_helloWorld/1_helloWorld.vcxproj.filters
@@ -7,5 +7,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="d3d12App.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
 </Project>
